add ping function
